--- a/src/App.css
+++ b/src/App.css
@@ -2,30 +2,33 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navi {
+  cursor: pointer;
+}
+.navi:hover {
+  color: #FFFFFF90;
+}
+
+.edit-navi {
+  cursor: pointer;
+}
+.edit-navi:hover {
+  color: #00000066
+}
+
+.App-header {
+  background-color: #750628;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: calc(1px + 2vmin);
+  color: white;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
