--- a/src/App.css
+++ b/src/App.css
@@ -41,8 +41,8 @@
 }
 
 .page {
-  margin-block: 2em;
-  margin-inline: 3em;
+  margin-block: 2vh;
+  margin-inline: 3vh;
 }
 
 ul {
@@ -50,8 +50,40 @@ ul {
   padding-inline-start: 0;
 }
 
+.training-list h3 {
+  margin-bottom: -0.5em;
+}
 .exercises-list p {
   margin-bottom: 0.25em;
+}
+
+form input {
+  margin-block: 0.5em;
+}
+
+form {
+  justify-content: space-around;
+  display: grid;
+}
+form h4 {
+  margin-bottom: 1em;
+  text-align: center;
+}
+form p {
+  margin: auto;
+  text-align: center;
+}
+.inp-p-basic {
+  display: inline;
+}
+.modify-form input, textarea {
+  width: 50%;
+}
+form .inp-num {
+  width: 2em;
+}
+.inp-p-num {
+  display: inline;
 }
 
 
