--- a/src/components/common/Spinner/Spinner.css
+++ b/src/components/common/Spinner/Spinner.css
@@ -4,7 +4,7 @@
     height: 40px;
     width: 6px;
     color: black;
-    animation: paddles 0.75s ease-out infinite;
+    animation: paddles 0.9s ease-out infinite;
 }
 .loader:before {
     content: "";
@@ -15,9 +15,9 @@
     top: 15px;
     width: 12px;
     height: 12px;
-    background-color: #de3500;
+    background-color: #750628;
     border-radius: 50%;
-    animation: ballbounce 0.6s ease-out infinite;
+    animation: ballBounce 0.8s ease-out infinite;
 }
 
 @keyframes paddles {
@@ -25,7 +25,7 @@
     50% { box-shadow: -25px 8px, 25px -10px }
     100% { box-shadow: -25px -10px, 25px 10px}
 }
-@keyframes ballbounce {
+@keyframes ballBounce {
     0% { transform: translateX(-20px) scale(1, 1.2) }
     25% { transform: scale(1.2, 1) }
     50% { transform: translateX(15px) scale(1, 1.2) }
