--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,6 @@
   display: none;
 }
 
-small {
-  margin-bottom: 1em;
-}
-
 .navi {
   font-size: 1.3em;
   color: black;
@@ -22,11 +18,15 @@ small {
 
 .page {
   margin-block: 3vh;
-  margin-inline: 5vh;
+  margin-inline: 10vw;
+}
+
+p {
+  margin-block: 0.5em;
 }
 
 hr {
-  width: 100vh;
+  width: 80vw;
 }
 
 form {
@@ -43,12 +43,15 @@ form p {
 }
 form .label-p-basic {
   display: inline;
-  width: 29vh;
+  width: 35vw;
 }
 
-form input, textarea {
+form textarea {
   margin-block: 0.5em;
-  width: 35%;
+  width: 40vw;
+}
+form input {
+  width: 30vw;
 }
 form .label-inp-num {
   width: 3.25em;
