--- a/src/components/common/TrainingsList/TrainingsList.css
+++ b/src/components/common/TrainingsList/TrainingsList.css
@@ -3,11 +3,31 @@ ul {
     padding-inline-start: 0;
 }
 
-.training-list h3 {
-    margin-bottom: -0.5em;
+.training-list-description {
+    font-family: RacingSansOne, sans-serif;
+    font-size: 1.2em;
 }
+
+.training-list h3 {
+    font-family: Gruppo, sans-serif;
+    font-size: 2em;
+    margin-bottom: -0.1em;
+}
+
+.exercises-list-p {
+    font-family: Tahoma, sans-serif;
+}
+
 .exercises-list p {
     margin-bottom: 0.25em;
+}
+
+.exercises-name {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.exercises-name-time {
+    font-family: Orbitron, sans-serif;
 }
 
 .hr-trainingList {
