--- a/src/components/pages/Training/TrainingTimer/ExerciseProgress/ExerciseProgress.css
+++ b/src/components/pages/Training/TrainingTimer/ExerciseProgress/ExerciseProgress.css
@@ -1,9 +1,16 @@
 .exercise-progress {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
     min-height: 6em;
 }
 
 .timer {
-    color: #750628;
+    color: black;
+    background-color: lightgreen;
+    display: inline-block;
+    margin-block: 0.1em;
+    width: 1.2em;
+    padding: 0.1em 0.8em;
+    border: 2px solid green;
     font-family: Digital7, sans-serif;
     font-weight: bold;
     font-size: xx-large;
