--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  color: darkslategray;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -23,4 +24,15 @@ code {
   font-family: 'Digital7';
   src: local('Digital7'),
   url('./fonts/digital-7.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Orbitron';
+  src: local('Orbitron'),
+  url('./fonts/Orbitron.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'RacingSansOne';
+  src: local('RacingSansOne'),
+  url('./fonts/RacingSansOne-Regular.ttf') format('truetype');
 }
