--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     font-size: calc(1px + 2vmin);
 }
+
 .header-element {
     color: #9AF5F8;
     font-weight: bold;
@@ -14,7 +15,7 @@
     padding: 1em;
 }
 .header-element:hover {
-    background: #c43800;
+    background: #cc3d01;
     color: white;
 }
 .header-element:active {
@@ -22,23 +23,12 @@
     color: #f1cc53;
 }
 
+.title {
+    font-size: 2em;
+    padding: 0 1.5em;
+}
 
 .logo-img {
     height: 3em;
     width: 3em;
 }
-
-.title {
-    font-size: 2em;
-    padding: 0.5em;
-    padding-inline: 1.5em;
-    /*padding-bottom: 0.5em;*/
-}
-
-/*
-yellow cc9300
-orange 9a4f2a
-white
-black
-grey
- */
