--- a/src/components/pages/EditPage/TrainingForm/TrainingForm.css
+++ b/src/components/pages/EditPage/TrainingForm/TrainingForm.css
@@ -1,15 +1,23 @@
 form {
     justify-content: space-around;
     display: grid;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
 form h4 {
-    margin-bottom: 1em;
-    text-align: center;
+    margin-bottom: 0.5em;
 }
+
+.form-exercises {
+    margin-top: 2em;
+    margin-bottom: -1em;
+}
+
 form p {
-    margin: auto;
-    text-align: center;
+    margin-top: 1em;
+    margin-bottom: 0.2em;
 }
+
 form .label-p-basic {
     display: inline;
     width: 35vw;
