--- a/src/components/pages/Training/TrainingTimer/ExerciseProgress/ExerciseProgress.css
+++ b/src/components/pages/Training/TrainingTimer/ExerciseProgress/ExerciseProgress.css
@@ -4,13 +4,13 @@
 }
 
 .timer {
-    color: black;
+    color: darkslategrey;
     background-color: lightgreen;
     display: inline-block;
     margin-block: 0.1em;
     width: 1.2em;
     padding: 0.1em 0.8em;
-    border: 2px solid green;
+    border: 2px solid black;
     font-family: Digital7, sans-serif;
     font-weight: bold;
     font-size: xx-large;
