--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  background: url("./assets/back.jpg");
-  background-size: cover;
+  background: radial-gradient(ellipse at top, #ffe99d, #ffe99d, transparent),
+  radial-gradient(ellipse at bottom, #ffe99d, #ffe99d, #dc4000);
 }
 
 code {
@@ -13,26 +13,25 @@ code {
     monospace;
 }
 
-
 @font-face {
   font-family: 'Gruppo';
   src: local('Gruppo'),
-  url('./fonts/Gruppo-Regular.ttf') format('truetype');
+  url('./fonts/Gruppo-Regular.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Digital7';
   src: local('Digital7'),
-  url('./fonts/digital-7.ttf') format('truetype');
+  url('./fonts/digital-7.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Orbitron';
   src: local('Orbitron'),
-  url('./fonts/Orbitron.ttf') format('truetype');
+  url('./fonts/Orbitron.woff2') format('woff2');
 }
 @font-face {
   font-family: 'RacingSansOne';
   src: local('RacingSansOne'),
-  url('./fonts/RacingSansOne-Regular.ttf') format('truetype');
+  url('./fonts/RacingSansOne-Regular.woff2') format('woff2');
 }
